added bot reply

--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
     "dev:https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tg:login": "node --experimental-strip-types --env-file=.env.local ./src/scripts/telegram_login.ts"
   },
   "dependencies": {
+    "@inquirer/prompts": "^5.3.8",
+    "@mtproto/core": "^6.3.0",
+    "@telegram-apps/init-data-node": "^1.0.4",
     "@telegram-apps/react-router-integration": "^1.0.0",
     "@telegram-apps/sdk-react": "^1.0.0",
     "@telegram-apps/telegram-ui": "^2.1.7",
     "@tonconnect/ui-react": "^2.0.5",
+    "@vercel/kv": "^2.0.0",
     "eruda": "^3.0.1",
     "mongoose": "^8.5.2",
     "next": "14.2.4",
+    "node-telegram-bot-api": "^0.66.0",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.2"
+    "react-hook-form": "^7.52.2",
+    "telegram": "^2.23.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
