--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@telegram-apps/sdk-react": "^1.0.0",
     "@telegram-apps/telegram-ui": "^2.1.7",
     "@tonconnect/ui-react": "^2.0.5",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/kv": "^2.0.0",
     "eruda": "^3.0.1",
     "mongoose": "^8.5.2",
