--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@telegram-apps/telegram-ui": "^2.1.7",
     "@tonconnect/ui-react": "^2.0.5",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
     "eruda": "^3.0.1",
     "mongoose": "^8.5.2",
