--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eruda": "^3.0.1",
     "mongoose": "^8.5.2",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
     "nextjs-toploader": "^1.6.12",
     "node-telegram-bot-api": "^0.66.0",
