--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "tg:login": "node --experimental-strip-types --env-file=.env.local ./src/scripts/telegram_login.ts",
-    "import:cats": "node --experimental-strip-types --env-file=.env.local ./src/scripts/sync-categories.ts"
+    "import:cats": "node --experimental-strip-types --env-file=.env.local ./src/scripts/import-categories.ts",
+    "import:links": "node --experimental-strip-types --env-file=.env.local ./src/scripts/import-csv-links.ts"
   },
   "dependencies": {
     "@inquirer/prompts": "^5.3.8",
@@ -24,6 +25,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/blob": "^0.23.4",
     "@vercel/kv": "^2.0.0",
+    "csv-parse": "^5.5.6",
     "eruda": "^3.0.1",
     "mongoose": "^8.5.2",
     "next": "14.2.4",
