--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "telegram": "^2.23.10",
     "zod": "^3.23.8"
   },
