--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/papaparse": "^5.3.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
