--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/kv": "^2.0.0",
     "csv-parse": "^5.5.6",
     "eruda": "^3.0.1",
+    "ioredis": "^5.4.1",
     "mongoose": "^8.5.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
